--- a/src/index.css
+++ b/src/index.css
@@ -5,12 +5,20 @@
 html,
 body {
     font-size: 16px;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Lato', sans-serif;
     line-height: 1.5;
     color: #353535;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     background-color: #fff;
+}
+
+p {
+
+    font-size: 20px;
+    font-weight: 500;
+    line-height: 30px;
+    color: #5E5E5E;
 
 }
